--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         class="home__social-icon"><i class='bx bxl-github'></i></a>
                 </div>
 
-<!--                 <div class="home__img"> 
+                <div class="home__img"> 
                     <svg class="home__blob" viewBox="0 0 479 467"
                         xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -82,7 +82,7 @@
                                 href="/assets/img/pic1.png" />
                         </g>
                     </svg>
-                </div> -->
+                </div> 
 
             </section>
 
