--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </a>
                 </div>
             </section>
-            <!-- =======EDUCATION================ -->
+            <!-- =======EDUCATION================ 
             <section class="education">
                 <h2 class="section-title">Education</h2>
                 <div class="contact__container">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
 
-            </section>
+            </section> -->
 
 
             <!--===== CONTACT =====-->
